Included Barcode scanner.

--- a/www/templates/despatchNote.html
+++ b/www/templates/despatchNote.html
@@ -30,7 +30,7 @@
             <a class="tab-item" href="#/app/closeDespatchNote/complete">
                 <i class="icon ion-checkmark" ></i>complete
             </a>
-            <a class="tab-item">
+            <a class="tab-item" ng-click="vm.barCodify()">
                 <i class="icon ion-ios-camera"></i>scan
             </a>
         </div>
