--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,5 @@
-<ion-view view-title="Home">
+<ion-view view-title="PackStation">
   <ion-content>
-    <h1>Packstation</h1>
-    <p>Put stuff in box, close box, repeat. Boom.</p>
       <div class="card">
           <div class="item item-divider">
               Set Packer
