--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -9,7 +9,7 @@
                   <label class="item-input-wrapper">
                       <input type="text" placeholder="packer" ng-model="vm.packer">
                   </label>
-                  <button class="button button-small">login</button>
+                  <button class="button button-small" ng-click="vm.login()">login</button>
               </div>
           </div>
       </div>
