--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,9 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+$stable: #007934 !default;
+$button-stable-text: white !default;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
