--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3339,7 +3339,7 @@ body,
   word-wrap: break-word;
   font-size: 14px;
   font-family: -apple-system;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "din-bold-webfont", "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !important;
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3595,7 +3595,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #000;
   font-weight: 500;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "din-bold-webfont", "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !important;
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -5120,7 +5120,7 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "din-bold-webfont", "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !important;
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -7550,7 +7550,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "din-bold-webfont", "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !important; }
 
 .item-input {
   display: -webkit-box;
@@ -9814,6 +9814,14 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+@font-face {
+  font-family: "din-bold-webfont";
+  src: url("din-bold-webfont.woff"); }
+
+@font-face {
+  font-family: "din-regular-webfont";
+  src: url("din-regular-webfont.woff"); }
 
 .list-input {
   margin-top: 2ex;
