Scanning of DN.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,8 +19,8 @@ $dark:                            #444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-$stable: #007934 !default;
-$button-stable-text: white !default;
+$balanced: #007934 !default;
+$button-balanced-text: white !default;
 
 $font-family-sans-serif: 'din-bold-webfont', '-apple-system', "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !important;
 $font-family-light-sans-serif: 'din-regular-webfont', '-apple-system', "HelveticaNeue-Light", "Roboto-Light", "Segoe UI-Light", sans-serif-light !important;
