--- a/www/templates/despatchNote.html
+++ b/www/templates/despatchNote.html
@@ -12,7 +12,7 @@
 
                 <div class="list-input">
                     <span class="list-input-label">/ {{item.TARGET_QUANTITY}} {{item.UNIT_CODE}} &nbsp; &nbsp;</span>
-                    <input type="number" ng-model="item.ACTUAL_QUANTITY" style="text-align: right; border: 1px solid #ddd; width: 4em;" ng-change="vm.saveDN()">
+                    <input type="number" ng-model="item.ACTUAL_QUANTITY" style="text-align: right; border: 1px solid #ddd; width: 4em;" ng-change="vm.updateProductQty(item.PRODUCT_KEY3, item.ACTUAL_QUANTITY)">
                 </div>
             </li>
         </ul>
