Request / Scan DN all working gravy.

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -15,7 +15,7 @@
           <br />
           Request D/N
         </button>
-        <button type="button" class="button button-stable" ng-click="vm.barCodify()" style="width: 50%">
+        <button type="button" class="button button-stable" ng-click="vm.scanDN()" style="width: 50%">
           <i class="ion-ios-barcode-outline" style="font-size: 36pt;"></i>
           <br />
           Scan D/N
