Better version of incrementing qtys.

--- a/www/templates/despatchNote.html
+++ b/www/templates/despatchNote.html
@@ -4,7 +4,7 @@
             <li class="item item-thumbnail-left" ng-repeat="item in vm.data.items">
                 <img  ng-src="{{vm.imgUrl}}{{item.PRODUCT_CODE}}.jpg">
                 <span class="badge badge-stable">{{item.TARGET_LOCATION}}</span>
-                <p><b>{{item.PRODUCT_CODE}}</b></p>
+                <p><b>{{item.PRODUCT_CODE}} {{item.PRODUCT_KEY3}}</b></p>
                 <p></p>
                 <p>{{item.LONG_DESCRIPTION_1}} </p>
 
